Added build profile to add on mac specific launcher arg when running UI tests