@@ -198,7 +198,7 @@
 					<!-- Increase max heap size and enable a debug connection to port 8998 -->
 					<!-- <argLine>-Xmx512m -Xdebug -Xrunjdwp:transport=dt_socket,address=8998,server=y,suspend=n</argLine> -->
 					<!-- bug in recent tycho snapshots only allow a single argument here -->
-					<argLine>-Xmx512m</argLine>
+					<argLine>${ui.test.vmargs}</argLine>
 				</configuration>
 			</plugin>
 
@@ -226,6 +226,34 @@
 
 		</plugins>
 	</build>
+
+
+	<profiles>
+		<profile>
+			<id>macosx</id>
+				<activation>
+					<os>
+						<name>mac os x</name>
+						<family>mac</family>
+					</os>
+				</activation>
+			<properties>
+				<ui.test.vmargs>-Xmx512m -XstartOnFirstThread</ui.test.vmargs>
+			</properties>
+		</profile>
+		<profile>
+			<id>other-os</id>
+			<activation>
+				<os>
+					<name>not-mac</name>
+          				<family>!mac</family>
+				</os>
+			</activation>
+			<properties>
+				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
+			</properties>
+		</profile>
+	</profiles>
 
 	<repositories>
 
